--- a/public/redirect.html
+++ b/public/redirect.html
@@ -1,11 +1,10 @@
-Redirecting...
-
 <html>
 <head>
-    <title>Redirecting...</title>
+    <title>Redireccionando...</title>
 </head>
 <body>
-
+    Redireccionando... 
+    A demorar demasiado? Clique <a href="/" >aqui</a>! 
     <script language="Javascript">
         if (window.opener!= null){
             window.opener.location.href = "/";
