--- a/public/refresh.html
+++ b/public/refresh.html
@@ -1,11 +1,10 @@
-Redirecting...
-
 <html>
 <head>
-    <title>Redirecting...</title>
+    <title>A fechar a janela</title>
 </head>
 <body>
-
+    Pode fechar a janela.
+    Aqui por engano? Clique <a href="/" >aqui</a>! 
     <script language="Javascript">
         if (window.opener!= null){
             window.opener.location.href = window.opener.location.href;
