--- a/public/redirect.html
+++ b/public/redirect.html
@@ -3,8 +3,10 @@
     <title>Redireccionando...</title>
 </head>
 <body>
-    Redireccionando... 
-    A demorar demasiado? Clique <a href="/" >aqui</a>! 
+    <p>
+        Redireccionando... <br/>
+        A demorar demasiado? Clique <a href="/" >aqui</a>!
+    </p> 
     <script language="Javascript">
         if (window.opener!= null){
             window.opener.location.href = "/";
