--- a/public/refresh.html
+++ b/public/refresh.html
@@ -3,8 +3,10 @@
     <title>A fechar a janela</title>
 </head>
 <body>
-    Pode fechar a janela.
-    Aqui por engano? Clique <a href="/" >aqui</a>! 
+    <p>
+        Pode fechar a janela. <br/>
+        Aqui por engano? Clique <a href="/" >aqui</a>! 
+    </p>
     <script language="Javascript">
         if (window.opener!= null){
             window.opener.location.href = window.opener.location.href;
